# estim8

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLA.md  README.md  environment.yml  pyproject.toml
.github/workflows/: cla.yml  draft-pdf.yml  pre-commit.yml  release.yml  test.yml
docs/: requirements.txt
docs/source/: 01_Example_Simulation.nblink  02_Example_Error_modeling.nblink  02_Example_Estimation.nblink  03_Example_Error_modeling.nblink  03_Example_Estimation.nblink  04_Example_Replicate_handling.nblink  05_Example_profile_likelihood.nblink  06_Example_MonteCarlo_sampling.nblink  07_Federated_worker_setup.nblink  conf.py  estim8.rst  example_gallery.rst  fmi-export.rst  index.rst  installation.rst  introduction.rst  modules.rst
docs/source/modules/: datatypes.rst  error_models.rst  estimator.rst  generalized_islands.rst  models.rst  objective.rst  optimizers.rst  profile.rst  utils.rst
docs/source/notebooks/: 1. Modeling & Simulation.ipynb  2. Experimental data and error modeling.ipynb  3. Parameter estimation.ipynb  4. Modeling experimental replicates.ipynb  5. Parameter Identifiability - Profile Likelihood.ipynb  6. Uncertainty Quantification - Monte Carlo Sampling.ipynb  7. Federated worker architecture.ipynb  SimpleBatch_Data.xlsx
estim8/: __init__.py  datatypes.py  error_models.py  estimator.py  generalized_islands.py  models.py  objective.py  optimizers.py  profile.py  utils.py  visualization.py  workers.py
examples/: 1. Modeling & Simulation.ipynb  2. Experimental data and error modeling.ipynb  2. Parameter estimation copy.ipynb  2. Simple parameter estimation.ipynb  3. Experimental data and error modeling.ipynb  3. Parameter estimation.ipynb  4. Modeling experimental replicates.ipynb  5. Parameter Identifiability - Profile Likelihood.ipynb  6. Uncertainty Quantification - Monte Carlo Sampling.ipynb  7. Federated worker architecture.ipynb  README.md  SimpleBatch.fmu  SimpleBatch_Data.xlsx  plot_multiple_sims.ipynb
images/testim8/: dockerfile  environment.yml  test.py
paper/: bibliography.bib  figures.pptx  graphics.ipynb  literature.bib  paper.md  references.bib
tests/: mockmodel.py  test_datatypes.py  test_error_models.py  test_estimator.py  test_generalized_islands.py  test_models.py  test_optimizers.py  test_optmizers.py  test_profile.py  test_utils.py  test_visualization.py  test_workers.py
tests/test_data/: Growth.fmu  Growth.mo  Growth_data.xlsx  Growth_linux64.fmu  SimpleBatch.fmu  SimpleBatch.mo  SimpleBatchData.xlsx  SimpleBatch_data.xlsx  SimpleBatch_errors.xlsx  SimpleBatch_linux64.fmu  model_compilation.py
