[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "estim8"
version = "0.1.0"
authors = [
    {name = "Tobias Latour", email = "t.latour@fz-juelich.de"},
    {name = "Daniel Strohmeier", email = "d.strohmeier@fz-juelich.de"},
    ]
description = "A parameter estimation tool for DAE models implemented compliant to the Functional Mockup Interface"
readme = "README.md"
requires-python = ">=3.10.0,<3.11"
license = {text = "AGPLv3"}
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords=["Biorpocessmodeling", "Parameter estimation", "Functional Mockup Interface"]
dependencies = [
    "numpy>=1.17.0,<2",
    "fmpy",
    "scikit-optimize",
    "scikit-learn==1.4.2",
    "matplotlib",
    "seaborn",
    "pandas",
    "pytensor-federated",
    "pytensor",
    "grpclib",
]

[tool.setuptools.packages.find]
include = ["estim8"]

[project.urls]
GitLab = "https://jugit.fz-juelich.de/t.latour/estim8-s-test"
