[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "estim8"
version = "0.1.4"
authors = [
    {name = "Tobias Latour", email = "t.latour@fz-juelich.de"},
    {name = "Daniel Strohmeier", email = "d.strohmeier@fz-juelich.de"},
    ]
description = "A parameter estimation tool for DAE models implemented compliant to the Functional Mockup Interface"
readme = "README.md"
requires-python = ">=3.10.0,<3.14"
license = {text = "AGPLv3"}
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Intended Audience :: Science/Research",
]
keywords=["Biorpocessmodeling", "Parameter estimation", "Functional Mockup Interface"]
dependencies = [
    "numpy>=1.26.0",
    "fmpy",
    "scikit-optimize",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "pandas<3",
    "pytensor-federated",
    "pytensor",
    "grpclib",
    "openpyxl",
    "psutil",
]

[tool.setuptools.packages.find]
include = ["estim8"]

[tool.setuptools.package-data]
"estim8" = [
    "py.typed",
]


[project.urls]
GitHub = "https://github.com/JuBiotech/estim8"
